--- a/css/styles.css
+++ b/css/styles.css
@@ -1,332 +1,405 @@
 :root {
-    --primary-text-color: #757575;
-    --title-text-color: #212121;
-    --accent-color: #2196F3;
-    --primary-background-color: #FFFFFF;
-    --secondary-background-color: #2F303A;
+	--primary-text-color: #757575;
+	--title-text-color: #212121;
+	--accent-color: #2196f3;
+	--primary-background-color: #ffffff;
+	--secondary-background-color: #2f303a;
 }
 
 /* index.html */
 
 body {
-    background-color: var(--primary-background-color);
-    color: var(--primary-text-color);
-    font-family: 'Roboto', sans-serif; 
+	background-color: var(--primary-background-color);
+	color: var(--primary-text-color);
+	font-family: "Roboto", sans-serif;
 }
 
 ul {
-    list-style: none; 
+	list-style: none;
 }
 
-h2, h3, p {
-    margin-top: 0;
-    margin-bottom: 0;
+h2,
+h3,
+p {
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 img {
-    line-height: 0;
+	/* line-height: 0; */
 }
 
 .list {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .link,
 .logo {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .accent {
-    color: var(--accent-color);
+	color: var(--accent-color);
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 1200px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.header {
+	border-bottom: 1px solid #ececec;
+}
+
+.header .container,
+.header .nav,
+.nav .list {
+	display: flex;
+	align-items: center;
 }
 
 .header .container {
-    padding-top: 25px;
-    padding-bottom: 25px;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.nav .logo {    
-    color: #000000;
-    font-family: 'Raleway',
-    sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    /* outline: 1px solid; */
+.header .list li + li {
+	margin-left: 50px;
 }
 
-.header .list {    
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    /* outline: 1px solid; */
+.nav .logo {
+	/* margin-right: 95px; */
+	padding-top: 25px;
+	padding-bottom: 25px;
+	color: #000000;
+	font-family: "Raleway", sans-serif;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.2;
+	letter-spacing: 0.03em;
+}
+
+.nav .list {
+	margin-left: 95px;
+}
+
+.header .list {
+	display: flex;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 1.2;
+	letter-spacing: 0.02em;
 }
 
 .header .link {
-    color: var(--primary-text-color);
-    /* outline: 1px solid; */
+	display: block;
+	padding-top: 32px;
+	padding-bottom: 32px;
+	color: var(--primary-text-color);
 }
 
 .nav .link {
-    color: var(--title-text-color);
+	/* display: block;
+	padding-top: 32px;
+	padding-bottom: 32px; */
+	color: var(--title-text-color);
 }
 
 .nav .link.current {
-    color: var(--accent-color);
+	color: var(--accent-color);
 }
 
 .header .link:hover,
 .header .link:focus {
-    color: var(--accent-color);
+	color: var(--accent-color);
 }
 
 .hero.section {
-    margin-bottom: 95px;
-    display: flex;
-    align-items: center;
-    background-color: var(--secondary-background-color);
-    text-align: center;
-    height: 600px;    
+	margin-bottom: 95px;
+	display: flex;
+	align-items: center;
+	background-color: var(--secondary-background-color);
+	text-align: center;
+	height: 600px;
 }
-
 
 .hero .section-title {
-    margin-top: 0;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;    
-    width: 695px;
-    height: 120px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;    
-    letter-spacing: 0.06em;
-    text-transform: uppercase;    
-    color: #FFFFFF;    
+	margin-top: 0;
+	margin-bottom: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 695px;
+	height: 120px;
+	font-weight: 900;
+	font-size: 44px;
+	line-height: 1.36;
+	letter-spacing: 0.06em;
+	text-transform: uppercase;
+	color: #ffffff;
 }
+
 .hero .button {
-    min-width: 215px;
-    height: 50px;
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;  
-    align-items: center;    
-    letter-spacing: 0.06em;
-    color: #FFFFFF;
-    cursor: pointer;
+	min-width: 215px;
+	height: 50px;
+	background-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	font-family: inherit;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	align-items: center;
+	letter-spacing: 0.06em;
+	color: #ffffff;
+	cursor: pointer;
 }
 
 .hero .button:hover,
 .hero .button:focus {
-    background-color: #188CE8;
+	background-color: #188ce8;
 }
 
 .section-title {
-    margin-top: 0;
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    /* outline: 1px solid; */
+	margin-top: 0;
+	margin-bottom: 50px;
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 1.2;
+	text-align: center;
+	letter-spacing: 0.03em;
+	color: var(--title-text-color);
 }
 
-
 .visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	margin: -1px;
 }
 
 .features.section,
 .business.section {
-    margin-bottom: 95px;
+	margin-bottom: 95px;
 }
 
-.features .list {    
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    /* outline: 1px solid; */
+.features .list {
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
 }
+
+.features .list li {
+	width: calc((100% - 3 * 30px) / 4);
+	margin-right: 30px;
+}
+
+.features .list li:nth-child(4n) {
+	margin-right: 0;
+}
+
+.features .list li:nth-last-child(-n + 4) {
+	margin-bottom: 0;
+}
+
 .features .title {
-    margin-bottom: 10px;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--title-text-color);
-    /* outline: 1px solid; */
+	margin-bottom: 10px;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 1.2;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	color: var(--title-text-color);
 }
 
-.business {
-    /* outline: 1px solid; */
+.business .list {
+	display: flex;
+	gap: 30px;
 }
 
 .team {
-    padding-top: 95px;
-    padding-bottom: 95px;
-    background-color: #F5F4FA;
-    /* outline: 1px solid; */
+	padding-top: 95px;
+	padding-bottom: 95px;
+	background-color: #f5f4fa;
 }
 
 .team .item {
-    background-color: var(--primary-background-color);
-    width: 270px;
-    height: 368px;
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.03em;    
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    /* outline: 1px solid; */
+	background-color: var(--primary-background-color);
+	width: 270px;
+	height: 368px;
+	font-size: 16px;
+	line-height: 1.2;
+	text-align: center;
+	letter-spacing: 0.03em;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+		0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 0px 0px 4px 4px;
+}
+
+.team .list {
+	display: flex;
+	gap: 30px;
 }
 
 .team .title {
-    margin-top: 30px;    
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.2;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    /* outline: 1px solid; */
+	margin-top: 30px;
+	margin-bottom: 10px;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.2;
+	text-align: center;
+	letter-spacing: 0.03em;
+	color: var(--title-text-color);
 }
 
 .footer {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--secondary-background-color);    
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	background-color: var(--secondary-background-color);
 }
 
 .footer .logo {
-    color: #FFFFFF;
-    font-family: 'Raleway',
-        sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
+	color: #ffffff;
+	font-family: "Raleway", sans-serif;
+	font-weight: 700;
+	font-size: 26px;
+	line-height: 1.2;
+	letter-spacing: 0.03em;
 }
-
 
 .address {
-    font-style: normal;
+	margin-top: 20px;
+	font-style: normal;
 }
-.address .street {    
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
+
+.address .street {
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	color: #ffffff;
 }
 
 .street .link {
-    color: #FFFFFF;
+	color: #ffffff;
 }
 
-.address .contact {    
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;    
+.address .contact {
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
 }
 
 .contact .link {
-    color: rgba(255, 255, 255, 0.6);
+	color: rgba(255, 255, 255, 0.6);
 }
 
 .address .link:hover,
 .address .link:focus {
-    color: var(--accent-color);
+	color: var(--accent-color);
 }
 
 /* portfolio.html */
 
 .portfolio {
-    margin-top: 94px;
-    margin-bottom: 94px;
+	padding-top: 94px;
+	padding-bottom: 94px;
 }
 
 .portfolio .button {
-    min-width: 73px;    
-    padding: 6px 22px;    
-    background-color: #F5F4FA;
-    border-radius: 4px;
-    color: var(--title-text-color);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.63;
-    text-align: center;
-    letter-spacing: 0.03em;
-    border: 0;
-    cursor: pointer;
+	min-width: 73px;
+	padding: 6px 22px;
+	background-color: #f5f4fa;
+	border-radius: 4px;
+	color: var(--title-text-color);
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 1.63;
+	text-align: center;
+	letter-spacing: 0.03em;
+	border: 0;
+	cursor: pointer;
 }
 
 .portfolio .button:hover,
-.portfolio .button:focus {    
-    background-color: #2196F3;    
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-    color: #FFFFFF;
+.portfolio .button:focus {
+	background-color: #2196f3;
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+		0px 2px 2px rgba(0, 0, 0, 0.12);
+	border-radius: 4px;
+	color: #ffffff;
+}
+
+.portfolio .list {
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .portfolio .list:first-child {
-    margin-bottom: 34px;
+	margin-bottom: 34px;
+	/* width: 575px; */
+	gap: 8px;
+	justify-content: center;
 }
 
-.portfolio .item {    
-    width: 370px;
-    height: 404px;    
-    background-color: var(--primary-background-color);
-    border: 1px solid #EEEEEE;    
-    font-size: 16px;    
-    letter-spacing: 0.03em;    
+.portfolio .item {
+	width: calc((100% - 2 * 30px) / 3);
+	margin-right: 30px;
+	margin-bottom: 30px;
+	/* min-height: 404px; */
+	background-color: var(--primary-background-color);
+	/* border: 1px solid #eeeeee; */
+	font-size: 16px;
+	letter-spacing: 0.03em;
 }
 
-.portfolio .item .title { 
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--title-text-color);
+.portfolio .item:nth-child(3n) {
+	margin-right: 0;
+}
+
+.portfolio .item:nth-last-child(-n + 3) {
+	margin-bottom: 0;
+}
+
+.portfolio .item .link {
+	display: block;
+}
+
+.portfolio .item .title {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
+	color: var(--title-text-color);
 }
 
 .portfolio .item .text {
-    padding: 20px 24px;    
+	padding: 20px 24px;
+	border-bottom: 1px solid #eeeeee;
+	border-right: 1px solid #eeeeee;
+	border-left: 1px solid #eeeeee;
 }
 
 .portfolio .item p {
-    line-height: 1.88;
+	line-height: 1.88;
 }
 
 .portfolio a {
-    color: inherit;
+	color: currentColor;
+}
+
+.portfolio .item img {
+	display: block;
 }
