--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,13 @@ p {
 }
 
 img {
-	/* line-height: 0; */
+	display: block;
+	max-width: 100%;
+}
+
+.section {
+	padding-top: 94px;
+	padding-bottom: 94px;
 }
 
 .list {
@@ -119,12 +125,12 @@ img {
 }
 
 .hero.section {
-	margin-bottom: 95px;
+	padding-top: 200px;
+	padding-bottom: 200px;
 	display: flex;
 	align-items: center;
 	background-color: var(--secondary-background-color);
 	text-align: center;
-	height: 600px;
 }
 
 .hero .section-title {
@@ -133,7 +139,6 @@ img {
 	margin-left: auto;
 	margin-right: auto;
 	width: 695px;
-	height: 120px;
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.36;
@@ -147,6 +152,7 @@ img {
 	height: 50px;
 	background-color: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border: 0;
 	border-radius: 4px;
 	font-family: inherit;
 	font-weight: 700;
@@ -187,10 +193,8 @@ img {
 	margin: -1px;
 }
 
-.features.section,
-.business.section {
-	margin-bottom: 95px;
-}
+
+
 
 .features .list {
 	display: flex;
@@ -223,21 +227,22 @@ img {
 	color: var(--title-text-color);
 }
 
+.business.section {
+	padding-top: 0;
+}
+
 .business .list {
 	display: flex;
 	gap: 30px;
 }
 
-.team {
-	padding-top: 95px;
-	padding-bottom: 95px;
+.team {	
 	background-color: #f5f4fa;
 }
 
 .team .item {
 	background-color: var(--primary-background-color);
-	width: 270px;
-	height: 368px;
+	width: calc(100% - 3 * 30px) / 4;
 	font-size: 16px;
 	line-height: 1.2;
 	text-align: center;
@@ -252,8 +257,12 @@ img {
 	gap: 30px;
 }
 
+.team .item .text {
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
 .team .title {
-	margin-top: 30px;
 	margin-bottom: 10px;
 	font-weight: 500;
 	font-size: 16px;
@@ -264,8 +273,6 @@ img {
 }
 
 .footer {
-	margin-top: 0;
-	margin-bottom: 0;
 	padding-top: 60px;
 	padding-bottom: 60px;
 	background-color: var(--secondary-background-color);
@@ -285,7 +292,11 @@ img {
 	font-style: normal;
 }
 
-.address .street {
+.address .list li:not(:last-child) {
+	margin-bottom: 9px;
+}
+
+.address .list {
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
@@ -294,12 +305,6 @@ img {
 
 .street .link {
 	color: #ffffff;
-}
-
-.address .contact {
-	font-size: 14px;
-	line-height: 1.71;
-	letter-spacing: 0.03em;
 }
 
 .contact .link {
@@ -313,10 +318,6 @@ img {
 
 /* portfolio.html */
 
-.portfolio {
-	padding-top: 94px;
-	padding-bottom: 94px;
-}
 
 .portfolio .button {
 	min-width: 73px;
@@ -348,8 +349,7 @@ img {
 }
 
 .portfolio .list:first-child {
-	margin-bottom: 34px;
-	/* width: 575px; */
+	margin-bottom: 50px;	
 	gap: 8px;
 	justify-content: center;
 }
@@ -357,11 +357,10 @@ img {
 .portfolio .item {
 	width: calc((100% - 2 * 30px) / 3);
 	margin-right: 30px;
-	margin-bottom: 30px;
-	/* min-height: 404px; */
+	margin-bottom: 30px;	
 	background-color: var(--primary-background-color);
-	/* border: 1px solid #eeeeee; */
 	font-size: 16px;
+	line-height: 1.88;
 	letter-spacing: 0.03em;
 }
 
@@ -373,18 +372,6 @@ img {
 	margin-bottom: 0;
 }
 
-.portfolio .item .link {
-	display: block;
-}
-
-.portfolio .item .title {
-	font-weight: 700;
-	font-size: 18px;
-	line-height: 2;
-	letter-spacing: 0.06em;
-	color: var(--title-text-color);
-}
-
 .portfolio .item .text {
 	padding: 20px 24px;
 	border-bottom: 1px solid #eeeeee;
@@ -392,14 +379,19 @@ img {
 	border-left: 1px solid #eeeeee;
 }
 
+.portfolio .item .title {	
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 2;
+	letter-spacing: 0.06em;
+	color: var(--title-text-color);
+}
+
 .portfolio .item p {
-	line-height: 1.88;
+	margin-top: 4px;;
 }
 
 .portfolio a {
 	color: currentColor;
 }
 
-.portfolio .item img {
-	display: block;
-}
